--- a/css/main.css
+++ b/css/main.css
@@ -50,6 +50,8 @@
   top: 50%;
   width: 1280px;
   overflow: hidden;
+  transform: scale(1.5);
+  transform-origin: center center;
 }
 
 .content-item.regular {
@@ -109,14 +111,15 @@
 .progress-bar {
   width: 100%;
   height: 5px;
-  background-color: rgba(235, 235, 235, 0.24);
+  background-color: rgba(235, 235, 235, 0.4);
   margin-bottom: 8px;
   margin-top: -16px;
 }
 
 .progress-bar__progress {
   height: 100%;
-  background-color: #CF3E80;
+  background-color: rgba(235, 235, 235, 1);
+  /* display: none; */
 }
 
 .watched .progress-bar__progress {
@@ -200,6 +203,7 @@
 }
 
 .focus .progress-bar {
+  background-color: rgba(235, 235, 235, 1);
   margin-top: 0px;
 }
 
