--- a/css/main.css
+++ b/css/main.css
@@ -64,7 +64,7 @@
 }
 
 .content-item__grad {
-  background: linear-gradient(to bottom, rgba(40,38,53,0) 0%,rgba(40,38,53,0.5) 32%,rgba(40,38,53,1) 100%);
+  background: linear-gradient(to bottom, rgba(16,16,28,0) 0%,rgba(16,16,28,0.5) 32%,rgba(16,16,28,1) 100%);
   height: 148px;
   opacity: 0;
   position: absolute;
@@ -119,7 +119,6 @@
 .progress-bar__progress {
   height: 100%;
   background-color: rgba(235, 235, 235, 1);
-  /* display: none; */
 }
 
 .watched .progress-bar__progress {
@@ -230,9 +229,27 @@
 }
 
 .focus .content-item__footer {
-  background-color: #282635;
+  /* background-color: #282635; */
 }
 
 .focus .content-item__subtitle {
   display: block;
 }
+
+/* Comment out code below to change progress bar styles */
+
+/* .progress-bar {
+  background-color: rgba(235, 235, 235, 0.4);
+}
+
+.progress-bar__progress {
+  background-color: rgba(207, 62, 128, 1);
+}
+
+.focus .progress-bar {
+  background-color: rgba(235, 235, 235, 1);
+}
+
+.focus .progress-bar__progress {
+  background-color: rgba(235, 73, 151, 1);
+} */
